	  version is no longer supported on the servers.

	XMPP:
	* Direct messages to a specific resource only upon receipt of a message
	  with content (as opposed to a typing notification, etc).  (Thanks to
	  rjoly for testing)
	* When sending data using in-band-bytestreams, interpret the block-size
	  attribute as the size of the BASE64-encoded representation of the data.
	* Validate the hash on incoming BoB data objects (for custom smileys etc.).

	Yahoo:
	* Attempt to better handle transparent proxies interfering with HTTP-based
	  login.
	* Fix handling of P2P packets, thus fixing the loss of some messages.

version 2.6.6 (02/18/2010):
	libpurple:
	* Fix 'make check' on OS X. (David Fang)
	* Fix a quirk in purple_markup_html_to_xhtml that caused some messages
	  to be improperly converted to XHTML.
	* Set "controlling-mode" correctly when initializing a media session.
	  Fixes receiving voice calls from Psi.
	* When looking up DNS records, use the type of record returned by the
	  server (instead of the type we asked for) to determine how to process
	  the record.
	* Fix an issue with parsing XML attributes that contain "&lt;br&gt;".
	  See ChangeLog.API for more details.

	General:
	* Correctly disable all missing dependencies when using the
	  --disable-missing-dependencies option.  (Gabriel Schulhof)

	Gadu-Gadu:
	* Fix display of avatars after a server-side change. (Krzysztof
	  Klinikowski)

	AIM:
	* Allow setting and displaying icons between 1x1 and 100x100 pixels.
	  Previously only icons between 48x48 and 50x50 were allowed.

	MSN:
	* Fix CVE-2010-0277, a possible remote crash when parsing an incoming
	  SLP message.  (Discovered by Fabian Yamaguchi)
	* File transfer requests will no longer cause a crash if you delete the
	  file before the other side accepts.
	* Received files will no longer hold an extra lock after completion,
	  meaning they can be moved or deleted without complaints from your OS.